--- a/output/index.html
+++ b/output/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="style.css" rel="stylesheet" type="text/css" />
+        <link href="tf2drops-style.css" rel="stylesheet" type="text/css" />
                 <script>
                     window.onload=function(){window.scrollTo(0, document.body.scrollHeight);};
                 </script>
